Closed Bug 1859728 Opened 2 years ago Closed 2 years ago

riscv64: fix some failures relating to misuses of BlockTrampolinePoolScope / AssemblerBufferWithConstantPools

Categories

(Core :: JavaScript Engine: JIT, defect)

RISCV64
Unspecified
defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox120 --- fixed

People

(Reporter: jseward, Assigned: jseward)

Details

Attachments

(2 files)

Bug 1846474 - Part 4 (680413:44a8e6272cad) made AutoForbidPoolsAndNops nestable
and added some assertions. The riscv64 ports fails those assertions, due to some
not-quite-right uses of BlockTrampolinePoolScope. This patch fixes those uses.

Part 4 of Bug 1846474 (680413:44a8e6272cad) made AutoForbidPoolsAndNops
nestable and added some assertions. The riscv64 ports fails those assertions,
due to some not-quite-right uses of BlockTrampolinePoolScope. This patch
fixes those uses.

There are also two simple ridealongs:

  • jit/riscv64/Simulator-riscv64.cpp: fix two unhandled function call types

  • wasm/WasmSummarizeInsn.cpp: fix compilation errors in the riscv
    implementation of SummarizeTrapInstruction. TrapSite checking isn't enabled
    on riscv yet, and this code might not work as-is, but we should at least
    make it compile.

All of the changes are for riscv64-specific code only.

Assignee: nobody → jseward
Status: NEW → ASSIGNED
Pushed by jseward@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/afe375a5bb0a riscv64: fix some failures relating to misuses of BlockTrampolinePoolScope / AssemblerBufferWithConstantPools. r=nbp.
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: