Bug 1859728 - riscv64: fix some failures relating to misuses of BlockTrampolinePoolScope / AssemblerBufferWithConstantPools.  r=nbp.

Part 4 of Bug 1846474 (680413:44a8e6272cad) made AutoForbidPoolsAndNops
nestable and added some assertions.  The riscv64 ports fails those assertions,
due to some not-quite-right uses of BlockTrampolinePoolScope.  This patch
fixes those uses.

There are also two simple ridealongs:

* jit/riscv64/Simulator-riscv64.cpp: fix two unhandled function call types

* wasm/WasmSummarizeInsn.cpp: fix compilation errors in the riscv
  implementation of SummarizeTrapInstruction.  TrapSite checking isn't enabled
  on riscv yet, and this code might not work as-is, but we should at least
  make it compile.

All of the changes are for riscv64-specific code only.

Differential Revision: https://phabricator.services.mozilla.com/D191401