js/src/jit/riscv64/Simulator-riscv64.cpp
@@ -1656,6 +1656,8 @@ typedef int32_t (*Prototype_Int32_GeneralInt64Int32Int64Int32)(int64_t, int64_t,
 typedef int32_t (*Prototype_Int32_GeneralInt64Int32Int32Int32)(int64_t, int64_t,
                                                                int32_t, int32_t,
                                                                int32_t);
+typedef int32_t (*Prototype_Int32_GeneralGeneralInt32Int32Int32GeneralInt32)(
+    int64_t, int64_t, int32_t, int32_t, int32_t, int64_t, int32_t);
 typedef int32_t (*Prototype_Int32_GeneralGeneralInt32General)(int32_t, int32_t,
                                                               int32_t, int32_t);
 typedef int32_t (*Prototype_Int32_GeneralInt64Int32Int64General)(
@@ -1665,6 +1667,8 @@ typedef int32_t (*Prototype_Int32_GeneralInt64Int64Int64)(int64_t, int64_t,
 typedef int32_t (*Prototype_Int32_GeneralInt64Int64Int64Int32)(int64_t, int64_t,
                                                                int64_t, int64_t,
                                                                int32_t);
+typedef int32_t (*Prototype_Int32_GeneralInt64Int64General)(int64_t, int64_t,
+                                                            int64_t, int64_t);
 typedef int32_t (*Prototype_Int32_GeneralInt64Int64Int64General)(
     int64_t, int64_t, int64_t, int64_t, int64_t);
 typedef int32_t (*Prototype_Int32_GeneralInt64Int64Int64GeneralGeneral)(
@@ -2156,6 +2160,14 @@ void Simulator::SoftwareInterrupt() {
         setRegister(a0, I64(ret));
         break;
       }
+      case js::jit::Args_Int32_GeneralInt64Int64General: {
+        int32_t ret =
+            reinterpret_cast<Prototype_Int32_GeneralInt64Int64General>(
+                nativeFn)(arg0, arg1, arg2, arg3);
+        if (FLAG_trace_sim) printf("ret %d\n", ret);
+        setRegister(a0, I64(ret));
+        break;
+      }
       case js::jit::Args_Int32_GeneralInt64Int64Int64General: {
         int32_t ret =
             reinterpret_cast<Prototype_Int32_GeneralInt64Int64Int64General>(
@@ -2197,6 +2209,14 @@ void Simulator::SoftwareInterrupt() {
             reinterpret_cast<Prototype_General_GeneralInt32Int32GeneralInt32>(
                 nativeFn)(arg0, I32(arg1), I32(arg2), arg3, I32(arg4));
         setRegister(a0, ret);
+        break;
+      }
+      case js::jit::Args_Int32_GeneralGeneralInt32Int32Int32GeneralInt32: {
+        int32_t ret = reinterpret_cast<
+            Prototype_Int32_GeneralGeneralInt32Int32Int32GeneralInt32>(
+            nativeFn)(arg0, arg1, I32(arg2), I32(arg3), I32(arg4), arg5,
+                      I32(arg6));
+        setRegister(a0, I64(ret));
         break;
       }
       case js::jit::Args_Int32_GeneralGeneralInt32General: {
